# lvgl-simulator-x

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lv_conf.h
lib/gfx/: CMakeLists.txt  README.md  gfx.c  gfx.h
port/mac/: CMakeLists.txt  port_X11.c
src/: main.c
